# Simple-Linux-Hardware-Daemon

./: InstallInstructions.txt  LICENSE  README.md  SLHD.service  install.sh  uninstall.sh
src/: CMakeLists.txt  essentialFunctions.cpp  essentialFunctions.h  main.cpp  miscFunctions.cpp  miscFunctions.h  userVariables.cpp  userVariables.h
